Added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,7 +28,11 @@
         <h2>CSS</h2>
         
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside an element</li>
+          <li>A header is a containter for content to be seen upon opening the webpage</li>
+          <li></li>
+      
         </ul>
 
       </section>
@@ -38,7 +43,7 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li> git add file: adds a file to your next commit </li>
+          <li>git add file: adds a file to your next commit </li>
           <li>git init: initilize an existing directory as a repo</li>
           <li>git push: Add local branch commits to a remote repo</li>
           <li>git pull: grab and merge any commits from the tracked remote branch</li>
